--- a/style.css
+++ b/style.css
@@ -7,7 +7,21 @@
 .column {
     display: flex;
     flex-direction: column;
-    width: 20px;
-    height: 20px;
-    border: 1px solid grey;
+    width: 15px;
+    height: 15px;
+    border: 1px solid lightgray;
 }
+.cir_outer {
+    display: flex;
+}
+
+.cir_inner {
+    height: 25px;
+    width: 25px;
+
+    background-color: white;
+    border: 2px solid gray;
+    border-radius: 50%;
+
+}
+
